# tap-gong

./: pyproject.toml
tap_gong/: auth.py  client.py  config_helper.py  tap.py
tap_gong/streams/: __init__.py  aggregated_activity.py  call_transcripts.py  calls.py  interaction_stats.py  users.py
tap_gong/tests/: test_core.py
